	- removed logfile open early. It did not have the proper permissions;
	  it was opened as root instead of the user. And we cannot change user
	  id yet, since chroot and bind ports need to be done.
	- callback checks for event callbacks done from mini_event. Because
	  of deletions cannot do this from netevent. This means when using
	  libevent the protection does not work on event-callbacks.

5 October 2007: Wouter
	- function pointer whitelist.

4 October 2007: Wouter
	- overwrite sensitive random seed value after use.
	- switch to logfile very soon if not -d (console attached).
	- error messages do not reveal the trustanchor contents.
	- start work on function pointer whitelists.

3 October 2007: Wouter
	- fix for multiple empty nonterminals, after multiple DSes in the
	  chain of trust.
	- mesh checks if modules are looping, and stops them.
	- refetch with CNAMEd nameserver address regression test added.
	- fixup line count bug in testcode, so testbound prints correct line
	  number with parse errors.
	- unit test for multiple ENT case.
	- fix for cname out of validated unsec zone.
	- fixup nasty id=0 reuse. Also added assertions to detect its
	  return (the assertion catches in the existing test cases).

1 October 2007: Wouter
	- skip F77, CXX, objC tests in configure step.
	- fixup crash in refetch glue after a CNAME.
	  and protection against similar failures (with error print).

28 September 2007: Wouter
	- test case for unbound-checkconf, fixed so it also checks the
	  interface: statements.

26 September 2007: Wouter
	- SIGHUP will reopen the log file.
	- Option to log to syslog.
	- please lint, fixup tests (that went to syslog on open, oops).
	- config check program.

25 September 2007: Wouter
	- tests for NSEC3. Fixup bitmap checks for NSEC3.
	- positive ANY response needs to check if wildcard expansion, and
	  check that original data did not exist.
	- tests for NSEC3 that wrong use of OPTOUT is bad. For insecure