@@ -183,7 +183,7 @@ RANGE_END
 
 STEP 1 QUERY
 ENTRY_BEGIN
-REPLY RD
+REPLY RD DO
 SECTION QUESTION
 328.0.0.194.example.com. IN A
 ENTRY_END
@@ -197,6 +197,7 @@ SECTION QUESTION
 328.0.0.194.example.com. IN A
 SECTION ANSWER
 328.0.0.194.example.com. 	3600	IN	A	11.11.11.11
+328.0.0.194.example.com.        3600    IN      RRSIG   A 5 6 3600 20070926135752 20070829135752 30899 0.0.194.example.com. chZW77mqywhw/4ch6BxXQ4EbFgb9zgh2xF75FLlKq/7ey6CfHSJRpJRjRqtMTn+1i18UL2B4nPS/WnK5DZeqlA== ;{id = 30899}
 SECTION AUTHORITY
 SECTION ADDITIONAL
 ENTRY_END
